src/test/resources/nox/errors/err_empty_struct.nox
// @test:error "CompilationError"
type Empty {}
main() {
    Empty e = {};
    return 1;
}
